Newsletters may be added to chapters upon creation now

--- a/src/main/resources/static/resources/css/style.css
+++ b/src/main/resources/static/resources/css/style.css
@@ -70,6 +70,10 @@ fieldset.inline-options label {
     margin-top: 15px;
 }
 
+.margin-top {
+    margin-top: 8px;
+}
+
 .hide-initially {
     display: none;
 }
