--- a/src/main/resources/templates/localGroupDetails.html
+++ b/src/main/resources/templates/localGroupDetails.html
@@ -482,6 +482,15 @@
                </p>
             </div>
 
+            <div class="alert alert-warning alert-dismissible" role="alert" th:if="${existingMember}">
+               <button type="button" class="close" data-dismiss="alert" aria-label="Schließen">
+                  <span aria-hidden="true">&times;</span>
+               </button>
+               <p>
+                  Die Person ist bereits Mitglied in der Ortsgruppe
+               </p>
+            </div>
+
             <div class="alert alert-info alert-dismissible" role="alert" th:if="${boardUpdated}">
                <button type="button" class="close" data-dismiss="alert" aria-label="Schließen">
                   <span aria-hidden="true">&times;</span>
@@ -588,7 +597,7 @@
 
             <!-- board overview -->
             <div class="col-md-4">
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <header class="panel-heading panel-menu">
                         <h2 class="panel-title">Vorstand</h2>
                         <div class="btn-group panel-menu-container">
